--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
-    
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "openai": "^3.2.1"
-    
   },
   "name": "chat",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "type": "module",
   "description": ""
-  
 }
