--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "author": "",
   "license": "ISC",
   "type": "module",
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": ">=12.0.0"
+  }
 }
