--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
-    "version":2,
-    "builds" : [
-        {
-            "src": "./index.js",
-            "use" : "@vercel/node"
-        }
-    ],
+    "version": 2,
     "routes": [
-        {
-            "src" : "/(.*)",
-            "dest":"/"
-        }
+      {
+        "src": "/api/(.*)",
+        "dest": "index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
+    ],
+    "rewrites": [
+      {
+        "source": "/",
+        "destination": "/index.html"
+      }
     ]
-}
+  }
+  
