--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "author": "",
   "license": "ISC",
   "type": "module",
-  "description": "",
-  "engines": {
-    "node": ">=12.0.0"
-  }
+  "description": ""
 }
