--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,15 @@
 {
-    "version": 2,
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
+    "version":2,
+    "builds" : [
+        {
+            "src": "./index.js",
+            "use" : "@vercel/node"
+        }
     ],
-    "rewrites": [
-      {
-        "source": "/",
-        "destination": "/index.html"
-      }
+    "routes": [
+        {
+            "src" : "/(.*)",
+            "dest":"/"
+        }
     ]
-  }
-  
+}
